#1122: Added COMMAND_SECURITY_DEFINITIONs to GL Account Type UCs